--- a/src/app/components/devices/detail/devices-detail.html
+++ b/src/app/components/devices/detail/devices-detail.html
@@ -21,4 +21,4 @@
 -->
 
 
-<ng-include src="'./app/components/devices/detail/device-class-templates/template-not-available.html'" ng-if="device.templateReady"></ng-include>
+<ng-include src="device.templateUrl" ng-if="device.templateReady"></ng-include>
