New styles and attribute.

--- a/src/app/shared/ui/tabs/tab.html
+++ b/src/app/shared/ui/tabs/tab.html
@@ -21,4 +21,5 @@
 -->
 
 
+<!-- <div ng-transclude class="tab" ng-show="active && !disabled"></div> -->
 <div ng-transclude class="tab" ng-show="active"></div>
