--- a/src/assets/scss/layout/_content.scss
+++ b/src/assets/scss/layout/_content.scss
@@ -157,6 +157,15 @@ $background: $white;
   // }
 }
 
+.content {
+  button {
+    @include rem(border-radius, 1.5);
+    @include rem(margin-bottom, 1.5);
+    width: 100%;
+  }
+}
+
+
 /*
  * Layout: intro
  */
