--- a/src/assets/scss/modules/_overlay.scss
+++ b/src/assets/scss/modules/_overlay.scss
@@ -71,8 +71,7 @@ $color: $grey;
   }
 
   .ngdialog-overlay {
-    @include linear-gradient(to bottom, rgba($background-overlay, 0.6), rgba($background-overlay, 0.4));
-    @include linear-gradient(30deg, rgba($background-overlay, 0.7) 0%, rgba($background-overlay, 0.8) 30%, rgba($background-overlay, 0.8) 70%, rgba($background-overlay, 0.7) 100%);
+    @include linear-gradient(30deg, rgba($background-overlay, 0.8) 0%, rgba($background-overlay, 0.9) 30%, rgba($background-overlay, 0.8) 70%, rgba($background-overlay, 0.8) 100%);
     z-index: 8888;
   }
 
@@ -82,8 +81,8 @@ $color: $grey;
     height: 100%;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
-    @include rem(padding, 9, 0, 0);
-    position: absolute;
+    // @include rem(padding, 7.5, 0, 0);
+    position: relative;
     z-index: 9997;
     width: 100%;
 
@@ -92,33 +91,17 @@ $color: $grey;
     //   @include rem(margin-left, -10);
     //   @include rem(width, 27);
     // }
-
-    button {
-      margin: 0;
-    }
-
-    .icon {
-      fill: $color;
-      @include rem(height, 1.5);
-      @include rem(width, 1.5);
-    }
-  }
-
-  button {
-    border: none;
-    @include rem(height, 7.5);
-    @include rem(padding, 3);
-    @include rem(width, 7.5);
-
-    &:hover {
-      background-color: transparent;
-    }
   }
 
   .close {
+    background-color: transparent;
+    border: none;
+    @include rem(height, 7.5);
+    @include rem(padding, 3);
     position: fixed;
       right: 0;
       top: 0;
+    @include rem(width, 7.5);
     z-index: 9999;
   }
 }
