Changed structure for new styles.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -24,16 +24,18 @@
 <!-- <div class="wrapper" ng-class="app.$state.current.controllerAs"> -->
 <div class="wrapper" ng-class="{ 'intro': app.$state.includes('guh.intro'), 'devices': app.$state.includes('guh.devices.master'), 'device': app.$state.includes('guh.devices.detail') }">
   <header class="app">
-    <div class="content">
+    <div class="content-wrapper">
       <nav>
         <ul>
-          <li><a class="heading" ng-class="{ active: app.$state.includes('guh.devices') }" ui-sref="guh.devices.master">Devices</a></li>
-          <li><a class="heading" ng-class="{ active: app.$state.includes('guh.services') }" ui-sref="guh.services.master">Services</a></li>
-          <!-- <li><a class="heading" ng-class="{ active: app.$state.includes('guh.moods') }" ui-sref="guh.moods.master">Moods</a></li> -->
+          <li ng-class="{ active: app.$state.includes('guh.devices') }"><a ui-sref="guh.devices.master">Devices</a></li>
+          <li ng-class="{ active: app.$state.includes('guh.services') }"><a ui-sref="guh.services.master">Services</a></li>
+          <!-- <li ng-class="{ active: app.$state.includes('guh.moods') }"><a class="heading" ui-sref="guh.moods.master">Moods</a></li> -->
         </ul>
       </nav>
 
-      <guh-action-bar></guh-action-bar>
+      <div class="actions">
+        <guh-action-bar></guh-action-bar>
+      </div>
     </div>
   </header>
 
