--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -68,8 +68,10 @@
 
 @import "../assets/scss/modules/container";
 @import "../assets/scss/modules/content";
+// @import "../assets/scss/modules/form";
 @import "../assets/scss/modules/heading";
 @import "../assets/scss/modules/hotkeys";
+@import "../assets/scss/modules/icon";
 @import "../assets/scss/modules/list";
 @import "../assets/scss/modules/loading";
 @import "../assets/scss/modules/overlay";
@@ -88,19 +90,17 @@
  * Directives (Shared UI)
  */
 
+@import "../app/shared/ui/action-bar/action-bar";
+@import "../app/shared/ui/button-group/button-group";
+@import "../app/shared/ui/color/color";
+@import "../app/shared/ui/form/form";
+@import "../app/shared/ui/range/range";
+@import "../app/shared/ui/remote-navigation/remote-navigation";
+@import "../app/shared/ui/remote-fn/remote-fn";
+@import "../app/shared/ui/remote-player/remote-player";
 @import "../app/shared/ui/slider/slider";
 @import "../app/shared/ui/wizard/wizard";
 @import "../app/shared/ui/tabs/tabs";
-
-// @import "../app/shared/ui/action-bar/action-bar";
-// @import "../app/shared/ui/button-group/button-group";
-// @import "../app/shared/ui/color/color";
-// @import "../app/shared/ui/form/form";
-// @import "../app/shared/ui/range/range";
-// @import "../app/shared/ui/remote-navigation/remote-navigation";
-// @import "../app/shared/ui/remote-fn/remote-fn";
-// @import "../app/shared/ui/remote-player/remote-player";
-// @import "../app/shared/ui/wizard/wizard";
 
 
 /*
