Change loading text and animation.

--- a/src/app/components/devices/add/pairing-templates/devices-add-create-discovery.html
+++ b/src/app/components/devices/add/pairing-templates/devices-add-create-discovery.html
@@ -22,7 +22,7 @@
 
 
 <!-- Loading spinner -->
-<div class="spinner" ng-show="!newDevice.discover && newDevice.loading">Loading</div>
+<p class="loader" ng-show="!newDevice.discover && newDevice.loading">Searching</p>
 
 
 <!-- Info -->
