--- a/src/app/components/services/add/pairing-templates/services-add-create-discovery.html
+++ b/src/app/components/services/add/pairing-templates/services-add-create-discovery.html
@@ -22,7 +22,7 @@
 
 
 <!-- Loading spinner -->
-<div class="spinner" ng-show="!newService.discover && newService.loading">Loading</div>
+<p class="loader" ng-show="!newService.discover && newService.loading">Searching</p>
 
 
 <!-- Info -->
