--- a/src/assets/scss/modules/_overlay.scss
+++ b/src/assets/scss/modules/_overlay.scss
@@ -106,6 +106,28 @@ $color: $grey;
   }
 }
 
+.modal_error {
+  .ngdialog-content {
+    position: relative;
+
+    &> div {
+      @include rem(font-size, 1.5);
+      @include rem(line-height, 3);
+      @include rem(padding, 1.5);
+      position: absolute;
+        left: 50%;
+        top: 50%;
+      text-align: center;
+      @include transform(translateX(-50%) translateY(-50%));
+      width: 100%;
+
+      p {
+        @include rem(margin-bottom, 1.5);
+      }
+    }
+  }
+}
+
 
 // .modal {
 //   position: fixed;
