--- a/src/app/shared/ui/slider/slider.scss
+++ b/src/app/shared/ui/slider/slider.scss
@@ -53,15 +53,11 @@ $color-current: $grey;
   cursor: pointer;
   float: left;
   height: 100%;
-  overflow-y: scroll;
+  overflow: hidden;
   @include rem(padding, 6);
   position: relative;
   @include transition(background-color 0.4s ease-in, box-shadow 0.2s ease-out, color 0.4s ease-in, width 0.2s ease-in-out);
   @include user-select(none);
-
-  &:nth-last-child(3) {
-    border-right: 1px solid rgba($border, 0.1);
-  }
 
   .content_content-center {
     @include transform(translateY(-50%));
@@ -70,15 +66,18 @@ $color-current: $grey;
   }
 }
 
-.slider__item_dummy {
+.slider__item-dummy {
   border-color: transparent;
+  float: left;
+  height: 100%;
 }
 
-.slider__item_current {
+.slider__item-current {
   border-left-color: transparent;
+  overflow-y: scroll;
 }
 
-.slider__item_details {
+.slider__item-details {
   background-color: $background-current;
   box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.3);
   color: $color-current;
