--- a/src/app/shared/ui/form/form.scss
+++ b/src/app/shared/ui/form/form.scss
@@ -64,6 +64,7 @@ input[type="password"] {
   color: $c-white;
   @include rem(margin, 0, 0, 1.5);
   @include rem(padding, 0.7, 1.5, 0.8);
+  @include transition(border 0.2s ease-in-out);
 
   &:hover {
     border-bottom-color: $border-hover;
