Added objects for states and params.

--- a/src/app/components/services/detail/services-detail.html
+++ b/src/app/components/services/detail/services-detail.html
@@ -21,4 +21,4 @@
 -->
 
 
-<ng-include src="'./app/components/services/detail/device-class-templates/template-not-available.html'" ng-if="service.templateReady"></ng-include>
+<ng-include src="service.templateUrl" ng-if="service.templateReady"></ng-include>
