Changed structure and styles of edit overlays.

--- a/src/app/components/devices/edit/edit-device-modal.html
+++ b/src/app/components/devices/edit/edit-device-modal.html
@@ -29,5 +29,5 @@
   </button>
 
   <h3>Edit {{ editDevice.name }}</h3>
-  <button ng-click="editDevice.remove()">Remove</button>
+  <button class="button" ng-click="editDevice.remove()">Remove</button>
 </div>
