--- a/src/app/components/services/edit/edit-service-modal.html
+++ b/src/app/components/services/edit/edit-service-modal.html
@@ -29,5 +29,5 @@
   </button>
 
   <h3>Edit {{ editService.name }}</h3>
-  <button ng-click="editService.remove()">Remove</button>
+  <button class="button" ng-click="editService.remove()">Remove</button>
 </div>
