--- a/src/app/shared/ui/line-chart/line-chart.scss
+++ b/src/app/shared/ui/line-chart/line-chart.scss
@@ -23,75 +23,6 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
-/*
- * Libraries
- *
- */
-
-@import "bourbon";
-
-
-/*
- * App SASS
- *
- */
-
-@import "../assets/scss/functions";
-@import "../assets/scss/mixins";
-@import "../assets/scss/variables";
-
-
-/*
- * Grid
- *
- */
-
-@import "../assets/scss/grid/grid";
-
-
-/*
- * Base & Layout
- *
- */
-
-@import "../assets/scss/base/reset";
-@import "../assets/scss/base/base";
-
-@import "../assets/scss/layout/header";
-@import "../assets/scss/layout/content";
-
-
-/*
- * Modules
- *
- */
-
-@import "../assets/scss/modules/button";
-@import "../assets/scss/modules/container";
-@import "../assets/scss/modules/content";
-@import "../assets/scss/modules/heading";
-@import "../assets/scss/modules/hotkeys";
-@import "../assets/scss/modules/icon";
-@import "../assets/scss/modules/list";
-@import "../assets/scss/modules/loading";
-@import "../assets/scss/modules/overlay";
-@import "../assets/scss/modules/state";
-@import "../assets/scss/modules/tile";
-
-
-/*
- * Directives (Shared UI)
- */
-
-@import "../app/shared/ui/action-bar/action-bar";
-@import "../app/shared/ui/button-group/button-group";
-@import "../app/shared/ui/color/color";
-@import "../app/shared/ui/form/form";
-@import "../app/shared/ui/line-chart/line-chart";
-@import "../app/shared/ui/range/range";
-@import "../app/shared/ui/remote-navigation/remote-navigation";
-@import "../app/shared/ui/remote-fn/remote-fn";
-@import "../app/shared/ui/remote-player/remote-player";
-@import "../app/shared/ui/slider/slider";
-@import "../app/shared/ui/wizard/wizard";
-@import "../app/shared/ui/tabs/tabs";
+.chart {
+  @include rem(margin-bottom, 3);
+}
