--- a/src/app/shared/ui/form/form-field-templates/form-field-ipV4.html
+++ b/src/app/shared/ui/form/form-field-templates/form-field-ipV4.html
@@ -21,4 +21,18 @@
 -->
 
 
-<div>Create template for <strong>ipV4</strong></div>
+<!-- TODO: Verify validation (https://github.com/ghiscoding/angular-validation/blob/master/src/validation-rules.js) -->
+<div ng-form="subForm">
+  <label>{{ formField.label }}</label>
+  <input name="{{ formField.label }}"
+         type="text"
+         ng-change="formField.setValue('throttle', 600)"
+         ng-model="formField.value"
+         ng-pattern="/^(25[0-5]|2[0-4]\d|[0-1]?\d?\d)(\.(25[0-5]|2[0-4]\d|[0-1]?\d?\d)){3}$/"
+         ng-required="{{ formField.required }}" />
+
+  <div ng-messages="subForm[formField.label].$error" ng-if="subForm[formField.label].$dirty">
+    <p ng-message="required">Field is required.</p>
+    <p ng-message="pattern">Entered IP address ist not valid.</p>
+  </div>
+</div>
