--- a/src/app/shared/ui/form/form-field-templates/form-field-ipV6.html
+++ b/src/app/shared/ui/form/form-field-templates/form-field-ipV6.html
@@ -21,4 +21,18 @@
 -->
 
 
-<div>Create template for <strong>ipV6</strong></div>
+<!-- TODO: Verify validation (https://github.com/ghiscoding/angular-validation/blob/master/src/validation-rules.js) -->
+<div ng-form="subForm">
+  <label>{{ formField.label }}</label>
+  <input name="{{ formField.label }}"
+         type="text"
+         ng-change="formField.setValue('throttle', 600)"
+         ng-model="formField.value"
+         ng-pattern="/^(?:[0-9a-fA-F]{1,4}:){7}[0-9a-fA-F]{1,4}$/i"
+         ng-required="{{ formField.required }}" />
+
+  <div ng-messages="subForm[formField.label].$error" ng-if="subForm[formField.label].$dirty">
+    <p ng-message="required">Field is required.</p>
+    <p ng-message="pattern">Entered IP address ist not valid.</p>
+  </div>
+</div>
